audio pause and resume

--- a/FinPlan.Web/Components/Layout/MainLayout.razor
+++ b/FinPlan.Web/Components/Layout/MainLayout.razor
@@ -522,7 +522,7 @@
 
 
 @* Confirmation modal for cookie association *@
-@if (showCookieAssocModal)
+@if (false)
 {
     <div class="modal-backdrop fade show" style="z-index:1040"></div>
     <div class="modal d-block" tabindex="-1" role="dialog" style="z-index:1050;">
@@ -598,6 +598,7 @@
 </div>
 
 <script src="/js/adLoader.js"></script>
+<script src="/js/audioInterop.js"></script>
 <script>
     // Consent logic: show banner if no consent cookie exists
     (function(){
