--- a/FinPlan.Web/Pages/Feedback/CostOfLivingFeedbackSurvey.razor
+++ b/FinPlan.Web/Pages/Feedback/CostOfLivingFeedbackSurvey.razor
@@ -1,4 +1,4 @@
-@page "/cost-of-living-survey"
+@page "/survey-future-cost-of-living"
 @using FinPlan.Web.Components.Models
 @using FinPlan.Web.Components.Survey
 @using Microsoft.AspNetCore.Components
@@ -21,7 +21,7 @@
         new SurveyQuestion("How clear was the meaning of “Retirement Value”?", new List<string>{"Very Clear","Clear","Neutral","Unclear","Very Unclear"}),
         new SurveyQuestion("How useful did you find the “Retirement Adjustment” options?", new List<string>{"Very Useful","Useful","Neutral","Not Useful","Did Not Use"}),
         new SurveyQuestion("How easy was it to understand the “Inflation Rate” setting?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
-        new SurveyQuestion("How easy was it to switch between different plans/cities?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
+        // new SurveyQuestion("How easy was it to switch between different plans/cities?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
         new SurveyQuestion("How easy was it to understand the frequency options (Monthly, Quarterly, Yearly)?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
         new SurveyQuestion("How useful did you find the “Include in Retirement” checkbox?", new List<string>{"Very Useful","Useful","Neutral","Not Useful","Did Not Use"}),
         new SurveyQuestion("How easy was it to collapse or expand categories?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
