--- a/FinPlan.Web/Pages/CostOfLiving/CostOfLiving.razor
+++ b/FinPlan.Web/Pages/CostOfLiving/CostOfLiving.razor
@@ -821,9 +821,9 @@
     <div class="row">
         <!-- Left column (2) - moved from previous left-sidebar nav -->
         <div class="col-12 col-md-2">
-            <ul class="list-unstyled mb-0">
+            @* <ul class="list-unstyled mb-0">
                 <li><a class="text-decoration-none d-block py-1" href="/"><i class="bi bi-house"></i> Home</a></li>
-            </ul>
+            </ul> *@
             <a href="/about-rewealthen" class="badge">About</a>
             <div class="card survey-card survey-card-narrow mb-2">
                 <div class="card-body text-center">
