--- a/FinPlan.Web/Pages/Feedback/CostOfLivingSurvey.razor
+++ b/FinPlan.Web/Pages/Feedback/CostOfLivingSurvey.razor
@@ -25,6 +25,7 @@
         new SurveyQuestion("How easy was it to understand the frequency options (Monthly, Quarterly, Yearly)?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
         new SurveyQuestion("How useful did you find the “Include in Retirement” checkbox?", new List<string>{"Very Useful","Useful","Neutral","Not Useful","Did Not Use"}),
         new SurveyQuestion("How easy was it to collapse or expand categories?", new List<string>{"Very Easy","Easy","Neutral","Difficult","Very Difficult"}),
+        new SurveyQuestion("How useful or clear did you find the overall totals or summary calculations?", new List<string>{"Very Useful","Useful","Neutral","Not Useful","Did Not Use"}),
         new SurveyQuestion("How would you rate the speed/performance of the planner?", new List<string>{"Excellent","Good","Average","Poor","Very Poor"}),
         new SurveyQuestion("How likely are you to recommend this planner to others?", new List<string>{"Very Likely","Likely","Neutral","Unlikely","Very Unlikely"}),
         new SurveyQuestion("Overall, how satisfied are you with the Cost of Living Planner?", new List<string>{"Very Satisfied","Satisfied","Neutral","Dissatisfied","Very Dissatisfied"}),
