--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -437,9 +437,9 @@
         <div class="container-fluid">
             <div class="row g-3">
                 <div class="col-12 col-md-2">
-                    <ul class="list-unstyled mb-0">
+                    @* <ul class="list-unstyled mb-0">
                         <li><a class="text-decoration-none d-block py-1" href="/"><i class="bi bi-house"></i> Home</a></li>
-                    </ul>
+                    </ul> *@
                     <div class="card survey-card survey-card-narrow mb-2">
                         <div class="card-body text-center">
                             <i class="bi bi-chat-dots" style="font-size:2rem; color:#1F6FEB;"></i>
